--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "hint": "^6.1.4",
     "html-webpack-plugin": "^5.3.2",
     "nodemon": "^2.0.12",
